Documentation for different firebase projects

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # Template for environment variables in Docker
 
+FIREBASE_PROJECT=nocodetests
+
 # Configure Hasura parameters. Change these passwords in any non-local deployments
 HASURA_DNSNAME=graphql-engine
 HASURA_INTERNAL_PORT=8080
